--- a/css-and-html/css-assign.html
+++ b/css-and-html/css-assign.html
@@ -21,7 +21,7 @@
         <i class="fa fa-home" aria-hidden="true" ></i>
 
        
-    <button class="boards">  <i class="fa fa-bars" aria-hidden="true">  Boards &#160</i> </button>
+    <button class="boards">  <i class="fa fa-bars" aria-hidden="true">  Boards &nbsp;</i> </button>
 
     <input type="search" placeholder="Search" class="search">
     <button type="submit" class="searchbutton">
